src/style.css
@font-face {
    font-family: 'Oswald';
    src: url('./fonts/Oswald-VariableFont_wght.ttf') format('truetype');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'Shippori';
    src: url('./fonts/ShipporiAntique-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Philosopher';
    src: url('./fonts/Philosopher-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

html {
    overflow-y: scroll;
}

html, body {
    height: 100%;
}

body {
    background: url(./images/background.jpeg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#header {
    display: flex;
    align-items: center;
    justify-content: center;
    align-self: stretch;
    background: rgba(0, 0, 0, 0.90);
    color: white;
    font-family: 'Philosopher';
    font-size: 5rem;
    height: 15vh;
    flex-shrink: 0;
}

#nav {
    display: flex;
    align-items: center;
    justify-content: center;
    align-self: stretch;
    background: rgba(0, 0, 0, 0.90);
    color: rgb(210, 210, 210);
    font-family: 'Shippori';
    font-size: 2rem;
    height: 7.5vh;
    flex-shrink: 0;
}

.inactive {
    margin: 0px 20px 0 20px;
    padding-top: 15px;
    padding-bottom: 15px;
    transition: padding .3s ease;
}

.inactive:hover {
    padding-top: 0px;
    padding-bottom: 30px;
    border-bottom: 2px solid white;
    transition: all .3s ease;
}

.active {
    margin: 0px 20px 0 20px;
    color: white;
    padding-top: 0px;
    padding-bottom: 15px;
    border-bottom: 3px solid white
}

#footer {
    display: flex;
    align-items: center;
    justify-content: center;
    align-self: stretch;
    background: rgba(0, 0, 0, 0.90);
    color: rgb(210, 210, 210);
    font-family: 'Shippori';
    font-size: 1.25rem;
    height: 4vh;
    position: sticky;
    top: 100vh;
    flex-shrink: 0;
}

#content {
    color: white;
    background: rgba(10, 10, 10, 0.8);
    padding: 30px;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

#home-img {
    border: 3px solid rgb(200, 200, 200);
    border-radius: 100%;
    height: 30vh;
    width: 35vh;
}

#home-text {
    text-align: center;
    padding: 10px;
    width: 35vh;
    font-family: 'Oswald';
    font-size: 1.5rem;
}

#home-hours-head {
    text-align: center;
    padding: 10px;
    width: 35vh;
    font-family: 'Oswald';
}

#home-hours {
    display: flex;
    flex-direction: column;
    padding: 10px;
    width: 35vh;
    font-family: 'Oswald';
    font-size: 1.5rem;
    background: rgb(47, 79, 49);
    border-radius: 10px;
}

.home-timeslot {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12.5px;
    border-left: 1px solid white;
    border-right: 1px solid white;
    border-bottom: 1px solid white;
}

#home-hours .home-timeslot:nth-child(1) {
    border-top: 1px solid white;
}

#menu-main {
    display: flex;
    flex-direction: column;
}

.menu-item {
    display: flex;
    margin: 10px;
    padding: 10px 30px 10px 10px;
    background: rgb(71, 71, 71);
    border-radius: 10px;
    align-items: flex-start;
}

.menu-pic {
    border: 3px solid rgb(200, 200, 200);
    border-radius: 10px;
    width: 25vh;
    height: auto;
    margin: 15px;
}

.menu-info {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    font-family: 'Oswald';
    font-size: 1.5rem;
}

.menu-header {
    display: flex;
    flex-direction:row;
    justify-content: space-between;
    font-family: 'Shippori';
    font-size: 1.25rem;
    border-bottom: 1px solid white;
}

#contact-img {
    border: 3px solid rgb(200, 200, 200);
    border-radius: 10px;
    width: 45vh;
    height: auto;
}

#contact-info-head {
    text-align: center;
    padding: 10px;
    width: 35vh;
    font-family: 'Oswald';
    align-self: center;
}

#contact-info {
    display: flex;
    flex-direction: column;
    width: 40vh;
    font-family: 'Oswald';
    font-size: 1.25rem;
    background: rgb(47, 79, 49);
    border-radius: 10px;
    align-self: center;
    padding: 0px 15px;
}

#contact-phone {
    border-bottom: 1px solid white;
}

#contact-phone, #contact-email {
    display: flex;
    justify-content: space-between;
}

#contact-locations-head {
    text-align: center;
    padding: 10px;
    width: 35vh;
    font-family: 'Oswald';
    align-self: center;
}

#contact-locations {
    display: flex;
    flex-direction: column;
    padding: 10px;
    width: 35vh;
    font-family: 'Oswald';
    font-size: 1.5rem;
    background: rgb(47, 79, 49);
    border-radius: 10px;
    align-self: center;
}

.contact-slot {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12.5px;
    border-left: 1px solid white;
    border-right: 1px solid white;
    border-bottom: 1px solid white;
}

#contact-locations .contact-slot:nth-child(1) {
    border-top: 1px solid white;
}

